<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spectrum 2.4</string>
    <string name="subtitle">Analizador de canales IEEE 802.11 · 2.4 GHz</string>

    <string name="scan">Escanear</string>
    <string name="scanning">Escaneando\u2026</string>

    <string name="about_university">Universidad Francisco de Paula Santander Ocaña</string>
    <string name="about_subject_label">Materia</string>
    <string name="about_subject">Comunicaciones Inalámbricas</string>
    <string name="about_teacher_label">Docente</string>
    <string name="about_teacher">Ing. Fabián Cuesta</string>
    <string name="about_members_label">Integrantes</string>
    <string name="about_close">Cerrar</string>

    <string name="team_members">
        Andrés Felipe Gómez Verjel - 0192250
        \nAnderson Lizarazo Tellez - 0192155
        \nAndrey Castilla Contreras - 0192295
        \nJavier Quintero - 0192163
        \nArley Santiago Quintero - 0192324
        \nMaicol Eduardo Robles Salazar - 0192125
        \nJairo Alonso Ramos Méndez - 0192041
        \nStefanny Ximena Páez Bayona - 0192019
        \nMichell Natalia Cárdenas Jiménez - 0192128
        \nPaula Johanna García Rodríguez - 0192092
        \nValentina Prado Sarabia - 0192111
        \nDarwin Jhosett Bermúdez Romero - 0192106
        \nLuisa Fernanda Acosta Vergel - 0192007
        \nAngel Andrés Boada Salazar - 0192108
    </string>

</resources>
